--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "1.5.3"
+    "@floating-ui/dom": "1.5.3",
+    "@tauri-apps/api": "^1.5.0",
+    "iconify-icon": "^1.0.8"
   }
 }
