--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,11 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.1", features = [ "dialog-all", "http-request"] }
+tauri = { version = "1.5.1", features = [ "system-tray", "dialog-all", "http-request"] }
+reqwest = {version= "0.11.14", features = ["blocking", "json"] }
+dotenv = "0.15.0"
+base64 = "0.21.0"
+tauri-plugin-oauth = "0.0.0-alpha.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
