--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.1", features = [ "system-tray", "dialog-all", "http-request"] }
+tauri = { version = "1.5.1", features = [ "system-tray", "dialog-all", "http-request", "http-multipart"] }
 reqwest = {version= "0.11.14", features = ["blocking", "json"] }
 dotenv = "0.15.0"
 base64 = "0.21.0"
